other-mpol/prepend-image-registry/.chainsaw-test/exception-patched.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mypod
  namespace: prepend-image-registry
spec:
  automountServiceAccountToken: false
  initContainers:
  - name: kyverno-init
    image: kyverno/kyverno:latest
  - name: busybox
    image: registry.io/busybox:1.28
  containers:
  - name: kyverno
    image: registry.io/kyverno/kyverno:1.2.3
  - name: redis
    image: registry.io/redis:latest
