other-mpol/prepend-image-registry/.chainsaw-test/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prepend-image-registry
