other-mpol/prepend-image-registry/.chainsaw-test/pods-patched.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod01
spec:
  automountServiceAccountToken: false
  containers:
  - name: kyverno
    image: registry.io/kyverno/kyverno:1.2.3
  - name: redis
    image: registry.io/redis:latest
