other-mpol/prepend-image-registry/.kyverno-test/resourceFailed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myfailedpod
spec:
  automountServiceAccountToken: false
  initContainers:
  - name: kyverno-init
    image: kyverno/kyverno:latest
  - name: busybox
    image: busybox:1.28
  containers:
  - name: kyverno
    image: kyverno/kyverno:1.2.3
  - name: redis
    image: redis:latest
